--- a/trends.html
+++ b/trends.html
@@ -57,6 +57,7 @@
       style="border: 1px solid #cccccc"
       src="https://thingspeak.com/channels/1567696/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"
     ></iframe>
+      <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/apps/matlab_visualizations/438425"></iframe>
       <div class="footer">
   <p></p>
   <br>
